--- a/devspaces-code/code/package.json
+++ b/devspaces-code/code/package.json
@@ -1,7 +1,7 @@
 {
   "name": "che-code",
   "version": "1.78.0",
-  "distro": "0517768961bd211d816704dd8cd14cee9c768031",
+  "distro": "7ba84c948f5b342f0295a3ba3c8547cca65410dd",
   "author": {
     "name": "Microsoft Corporation"
   },
@@ -120,9 +120,8 @@
     "@types/trusted-types": "^1.0.6",
     "@types/vscode-notebook-renderer": "^1.72.0",
     "@types/webpack": "^5.28.1",
-    "@types/wicg-file-system-access": "^2020.9.5",
+    "@types/wicg-file-system-access": "^2020.9.6",
     "@types/windows-foreground-love": "^0.3.0",
-    "@types/windows-process-tree": "^0.2.0",
     "@types/winreg": "^1.2.30",
     "@types/yauzl": "^2.9.1",
     "@types/yazl": "^2.4.2",
@@ -207,7 +206,7 @@
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "tsec": "0.1.4",
-    "typescript": "^5.1.0-dev.20230328",
+    "typescript": "^5.1.0-dev.20230411",
     "typescript-formatter": "7.1.0",
     "underscore": "^1.12.1",
     "util": "^0.12.4",
@@ -229,9 +228,9 @@
   },
   "optionalDependencies": {
     "@vscode/windows-mutex": "0.4.2",
+    "@vscode/windows-process-tree": "0.4.2",
     "@vscode/windows-registry": "1.0.10",
-    "windows-foreground-love": "0.5.0",
-    "windows-process-tree": "0.4.0"
+    "windows-foreground-love": "0.5.0"
   },
   "resolutions": {
     "elliptic": "^6.5.3",
