--- a/devspaces-code/code/remote/package.json
+++ b/devspaces-code/code/remote/package.json
@@ -37,7 +37,7 @@
     "js-yaml": "^4.1.0"
   },
   "optionalDependencies": {
-    "@vscode/windows-registry": "1.0.10",
-    "windows-process-tree": "0.4.0"
+    "@vscode/windows-process-tree": "0.4.2",
+    "@vscode/windows-registry": "1.0.10"
   }
 }
