ci: [sync] Update from eclipse-che/che-server @ 251a6e
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/devspaces-server/Dockerfile
+++ b/devspaces-server/Dockerfile
@@ -50,8 +50,8 @@ LABEL summary="$SUMMARY" \
       com.redhat.component="$PRODNAME-$COMPNAME-container" \
       name="$PRODNAME/$COMPNAME" \
       version="3.7" \
-      pnc_artifact_id="10121723" \
-      pnc_build_id="AYCIUVCAYAIAA" \
+      pnc_artifact_id="10125269" \
+      pnc_build_id="AYDMGXTIIAIAA" \
       license="EPLv2" \
       maintainer="Nick Boldt <nboldt@redhat.com>" \
       io.openshift.expose-services="" \
