--- a/devspaces-udi/Dockerfile
+++ b/devspaces-udi/Dockerfile
@@ -106,6 +106,7 @@ RUN \
     # install all the rpms and modules
     microdnf install -y dnf && \
     dnf -y -q module reset   container-tools       maven     nodejs                 python39                   php; \
+    dnf -y -q install compat-sap-c++-9 && \
     dnf -y -q module install container-tools:rhel8 maven:3.6 nodejs:$NODEJS_VERSION python39:${PYTHON_VERSION} php:$PHP_VERSION && \
     dnf -y -q install --setopt=tsflags=nodocs \
         golang \
@@ -247,9 +248,6 @@ RUN \
     mkdir -p ${HOME}/che/ls-csharp ${HOME}/che/ls-clangd && \
     echo "clangd -pretty" > ${HOME}/che/ls-clangd/launch.sh && \
     chmod +x ${HOME}/che/ls-clangd/launch.sh && \
-
-RUN dnf install -y compat-sap-c++-9
-
     ########################################################################
     # .NET (dotnet) 6.0 (s390x and x64 only) + 7.0 (ppc64le, s390x and x64 only) (Tech Preview)
     ########################################################################
