--- a/devspaces-udi/Dockerfile
+++ b/devspaces-udi/Dockerfile
@@ -106,7 +106,6 @@ RUN \
     # install all the rpms and modules
     microdnf install -y dnf && \
     dnf -y -q module reset   container-tools       maven     nodejs                 python39                   php; \
-    dnf -y -q install compat-sap-c++-10 && \
     dnf -y -q module install container-tools:rhel8 maven:3.6 nodejs:$NODEJS_VERSION python39:${PYTHON_VERSION} php:$PHP_VERSION && \
     dnf -y -q install --setopt=tsflags=nodocs \
         golang \
@@ -248,6 +247,9 @@ RUN \
     mkdir -p ${HOME}/che/ls-csharp ${HOME}/che/ls-clangd && \
     echo "clangd -pretty" > ${HOME}/che/ls-clangd/launch.sh && \
     chmod +x ${HOME}/che/ls-clangd/launch.sh && \
+    if [[ ! "$(uname -m)" == 's390x' ]]; then \
+        dnf -y -q install compat-sap-c++-9; \
+    fi && \
     ########################################################################
     # .NET (dotnet) 6.0 (s390x and x64 only) + 7.0 (ppc64le, s390x and x64 only) (Tech Preview)
     ########################################################################
