ci: [sync] Update from redhat-developer/devspaces @ 67c0
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/devspaces-pluginregistry/job-config.json
+++ b/devspaces-pluginregistry/job-config.json
@@ -346,7 +346,7 @@
         "disabled": true
       },
       "3.6": {
-        "disabled": false
+        "disabled": true
       },
       "3.7": {
         "disabled": false
