--- a/devspaces-server/Dockerfile
+++ b/devspaces-server/Dockerfile
@@ -50,8 +50,8 @@ LABEL summary="$SUMMARY" \
       com.redhat.component="$PRODNAME-$COMPNAME-container" \
       name="$PRODNAME/$COMPNAME" \
       version="3.7" \
-      pnc_artifact_id="10125269" \
-      pnc_build_id="AYDMGXTIIAIAA" \
+      pnc_artifact_id="10145404" \
+      pnc_build_id="AYFLJ4WI6LYAA" \
       license="EPLv2" \
       maintainer="Nick Boldt <nboldt@redhat.com>" \
       io.openshift.expose-services="" \
