--- a/devspaces-operator-bundle-generated/root/buildinfo/Dockerfile-devspaces-operator-bundle-3.7-46
+++ b/devspaces-operator-bundle-generated/root/buildinfo/Dockerfile-devspaces-operator-bundle-3.7-46
@@ -42,7 +42,7 @@ LABEL operators.operatorframework.io.bundle.mediatype.v1=registry+v1 \
       maintainer="Anatolii Bazko <abazko@redhat.com>, Nick Boldt <nboldt@redhat.com>, Dmytro Nochevnov <dnochevn@redhat.com>" \
       io.openshift.expose-services="" \
       usage=""
-LABEL release=45
+LABEL release=46
 
-ADD devspaces-operator-bundle-container-3.7-45.json /root/buildinfo/content_manifests/devspaces-operator-bundle-container-3.7-45.json
-LABEL "com.redhat.license_terms"="https://www.redhat.com/agreements" "distribution-scope"="public" "vendor"="Red Hat, Inc." "build-date"="2023-04-16T05:47:54" "architecture"="ppc64le" "vcs-type"="git" "vcs-ref"="7e724f962246ba8bf786903a97d959985b3d1864" "url"="https://access.redhat.com/containers/#/registry.access.redhat.com/devspaces/operator-bundle/images/3.7-45"
+ADD devspaces-operator-bundle-container-3.7-46.json /root/buildinfo/content_manifests/devspaces-operator-bundle-container-3.7-46.json
+LABEL "com.redhat.license_terms"="https://www.redhat.com/agreements" "distribution-scope"="public" "vendor"="Red Hat, Inc." "build-date"="2023-04-16T09:17:52" "architecture"="s390x" "vcs-type"="git" "vcs-ref"="7e724f962246ba8bf786903a97d959985b3d1864" "url"="https://access.redhat.com/containers/#/registry.access.redhat.com/devspaces/operator-bundle/images/3.7-46"
