--- a/devspaces-operator-bundle-generated/root/buildinfo/Dockerfile-devspaces-operator-bundle-3.7-48
+++ b/devspaces-operator-bundle-generated/root/buildinfo/Dockerfile-devspaces-operator-bundle-3.7-48
@@ -42,7 +42,7 @@ LABEL operators.operatorframework.io.bundle.mediatype.v1=registry+v1 \
       maintainer="Anatolii Bazko <abazko@redhat.com>, Nick Boldt <nboldt@redhat.com>, Dmytro Nochevnov <dnochevn@redhat.com>" \
       io.openshift.expose-services="" \
       usage=""
-LABEL release=47
+LABEL release=48
 
-ADD devspaces-operator-bundle-container-3.7-47.json /root/buildinfo/content_manifests/devspaces-operator-bundle-container-3.7-47.json
-LABEL "com.redhat.license_terms"="https://www.redhat.com/agreements" "distribution-scope"="public" "vendor"="Red Hat, Inc." "build-date"="2023-04-16T09:42:22" "architecture"="x86_64" "vcs-type"="git" "vcs-ref"="7e724f962246ba8bf786903a97d959985b3d1864" "url"="https://access.redhat.com/containers/#/registry.access.redhat.com/devspaces/operator-bundle/images/3.7-47"
+ADD devspaces-operator-bundle-container-3.7-48.json /root/buildinfo/content_manifests/devspaces-operator-bundle-container-3.7-48.json
+LABEL "com.redhat.license_terms"="https://www.redhat.com/agreements" "distribution-scope"="public" "vendor"="Red Hat, Inc." "build-date"="2023-04-16T10:23:25" "architecture"="s390x" "vcs-type"="git" "vcs-ref"="192e7bf51faad1afda8c4ca77865d6190799322d" "url"="https://access.redhat.com/containers/#/registry.access.redhat.com/devspaces/operator-bundle/images/3.7-48"
