--- a/devspaces-operator-bundle-generated/root/buildinfo/Dockerfile-devspaces-operator-bundle-3.7-53
+++ b/devspaces-operator-bundle-generated/root/buildinfo/Dockerfile-devspaces-operator-bundle-3.7-53
@@ -42,7 +42,7 @@ LABEL operators.operatorframework.io.bundle.mediatype.v1=registry+v1 \
       maintainer="Anatolii Bazko <abazko@redhat.com>, Nick Boldt <nboldt@redhat.com>, Dmytro Nochevnov <dnochevn@redhat.com>" \
       io.openshift.expose-services="" \
       usage=""
-LABEL release=52
+LABEL release=53
 
-ADD devspaces-operator-bundle-container-3.7-52.json /root/buildinfo/content_manifests/devspaces-operator-bundle-container-3.7-52.json
-LABEL "com.redhat.license_terms"="https://www.redhat.com/agreements" "distribution-scope"="public" "vendor"="Red Hat, Inc." "build-date"="2023-04-17T14:05:50" "architecture"="ppc64le" "vcs-type"="git" "vcs-ref"="3400e0624e5374f5c956a19a291c97363f37e2dc" "url"="https://access.redhat.com/containers/#/registry.access.redhat.com/devspaces/operator-bundle/images/3.7-52"
+ADD devspaces-operator-bundle-container-3.7-53.json /root/buildinfo/content_manifests/devspaces-operator-bundle-container-3.7-53.json
+LABEL "com.redhat.license_terms"="https://www.redhat.com/agreements" "distribution-scope"="public" "vendor"="Red Hat, Inc." "build-date"="2023-04-17T17:47:36" "architecture"="x86_64" "vcs-type"="git" "vcs-ref"="3400e0624e5374f5c956a19a291c97363f37e2dc" "url"="https://access.redhat.com/containers/#/registry.access.redhat.com/devspaces/operator-bundle/images/3.7-53"
