--- a/devspaces-operator-bundle-generated/root/buildinfo/Dockerfile-devspaces-operator-bundle-3.7-58
+++ b/devspaces-operator-bundle-generated/root/buildinfo/Dockerfile-devspaces-operator-bundle-3.7-58
@@ -42,7 +42,7 @@ LABEL operators.operatorframework.io.bundle.mediatype.v1=registry+v1 \
       maintainer="Anatolii Bazko <abazko@redhat.com>, Nick Boldt <nboldt@redhat.com>, Dmytro Nochevnov <dnochevn@redhat.com>" \
       io.openshift.expose-services="" \
       usage=""
-LABEL release=57
+LABEL release=58
 
-ADD devspaces-operator-bundle-container-3.7-57.json /root/buildinfo/content_manifests/devspaces-operator-bundle-container-3.7-57.json
-LABEL "com.redhat.license_terms"="https://www.redhat.com/agreements" "distribution-scope"="public" "vendor"="Red Hat, Inc." "build-date"="2023-04-18T15:30:56" "architecture"="x86_64" "vcs-type"="git" "vcs-ref"="37add834bd06aca5bc4ccbfebba952ed71c332d4" "url"="https://access.redhat.com/containers/#/registry.access.redhat.com/devspaces/operator-bundle/images/3.7-57"
+ADD devspaces-operator-bundle-container-3.7-58.json /root/buildinfo/content_manifests/devspaces-operator-bundle-container-3.7-58.json
+LABEL "com.redhat.license_terms"="https://www.redhat.com/agreements" "distribution-scope"="public" "vendor"="Red Hat, Inc." "build-date"="2023-04-18T19:03:53" "architecture"="ppc64le" "vcs-type"="git" "vcs-ref"="37add834bd06aca5bc4ccbfebba952ed71c332d4" "url"="https://access.redhat.com/containers/#/registry.access.redhat.com/devspaces/operator-bundle/images/3.7-58"
