ci: [sync] Update from eclipse-che/che-server @ 8d0d9a
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/devspaces-server/Dockerfile
+++ b/devspaces-server/Dockerfile
@@ -50,8 +50,8 @@ LABEL summary="$SUMMARY" \
       com.redhat.component="$PRODNAME-$COMPNAME-container" \
       name="$PRODNAME/$COMPNAME" \
       version="3.7" \
-      pnc_artifact_id="10165359" \
-      pnc_build_id="AYGEEVBN6LYAA" \
+      pnc_artifact_id="10176457" \
+      pnc_build_id="AYHHK37KMMYAA" \
       license="EPLv2" \
       maintainer="Nick Boldt <nboldt@redhat.com>" \
       io.openshift.expose-services="" \
