--- a/devspaces-operator-bundle-generated/root/buildinfo/Dockerfile-devspaces-operator-bundle-3.7-68
+++ b/devspaces-operator-bundle-generated/root/buildinfo/Dockerfile-devspaces-operator-bundle-3.7-68
@@ -42,7 +42,7 @@ LABEL operators.operatorframework.io.bundle.mediatype.v1=registry+v1 \
       maintainer="Anatolii Bazko <abazko@redhat.com>, Nick Boldt <nboldt@redhat.com>, Dmytro Nochevnov <dnochevn@redhat.com>" \
       io.openshift.expose-services="" \
       usage=""
-LABEL release=67
+LABEL release=68
 
-ADD devspaces-operator-bundle-container-3.7-67.json /root/buildinfo/content_manifests/devspaces-operator-bundle-container-3.7-67.json
-LABEL "com.redhat.license_terms"="https://www.redhat.com/agreements" "distribution-scope"="public" "vendor"="Red Hat, Inc." "build-date"="2023-04-20T07:50:46" "architecture"="x86_64" "vcs-type"="git" "vcs-ref"="37add834bd06aca5bc4ccbfebba952ed71c332d4" "url"="https://access.redhat.com/containers/#/registry.access.redhat.com/devspaces/operator-bundle/images/3.7-67"
+ADD devspaces-operator-bundle-container-3.7-68.json /root/buildinfo/content_manifests/devspaces-operator-bundle-container-3.7-68.json
+LABEL "com.redhat.license_terms"="https://www.redhat.com/agreements" "distribution-scope"="public" "vendor"="Red Hat, Inc." "build-date"="2023-04-20T09:55:03" "architecture"="ppc64le" "vcs-type"="git" "vcs-ref"="37add834bd06aca5bc4ccbfebba952ed71c332d4" "url"="https://access.redhat.com/containers/#/registry.access.redhat.com/devspaces/operator-bundle/images/3.7-68"
