add project context for setup DWO

--- a/.github/workflows/empty-worksapce-smoke-test-on-minikube.yaml
+++ b/.github/workflows/empty-worksapce-smoke-test-on-minikube.yaml
@@ -48,6 +48,7 @@ jobs:
 
     - name: Setup DWO
       run: |
+        cd devworkspace-operator
         make install
 
     - name: Pre-pull image on minikube
