--- a/.github/workflows/empty-worksapce-smoke-test-on-minikube.yaml
+++ b/.github/workflows/empty-worksapce-smoke-test-on-minikube.yaml
@@ -45,6 +45,7 @@ jobs:
       run: |
         cd devworkspace-operator
         make install_cert_manager
+        sleep: 360
 
     - name: Setup DWO
       run: |
