--- a/devspaces-code/code/package.json
+++ b/devspaces-code/code/package.json
@@ -128,6 +128,7 @@
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/experimental-utils": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
+    "@vscode/gulp-electron": "^1.33.0",
     "@vscode/l10n-dev": "0.0.18",
     "@vscode/telemetry-extractor": "^1.9.9",
     "@vscode/test-web": "^0.0.41",
@@ -153,7 +154,6 @@
     "file-loader": "^6.2.0",
     "glob": "^5.0.13",
     "gulp": "^4.0.0",
-    "gulp-atom-electron": "^1.33.0",
     "gulp-azure-storage": "^0.12.1",
     "gulp-bom": "^3.0.0",
     "gulp-buffer": "0.0.2",
