--- a/devspaces-operator-bundle/olm-catalog/stable/channel.yaml
+++ b/devspaces-operator-bundle/olm-catalog/stable/channel.yaml
@@ -35,3 +35,5 @@ entries:
     replaces: eclipse-che.v7.62.0
   - name: eclipse-che.v7.64.0
     replaces: eclipse-che.v7.63.0
+  - name: eclipse-che.v7.65.0
+    replaces: eclipse-che.v7.64.0
