--- a/devspaces-server/Dockerfile
+++ b/devspaces-server/Dockerfile
@@ -50,8 +50,8 @@ LABEL summary="$SUMMARY" \
       com.redhat.component="$PRODNAME-$COMPNAME-container" \
       name="$PRODNAME/$COMPNAME" \
       version="3.7" \
-      pnc_artifact_id="10208416" \
-      pnc_build_id="AYIUMQ2KTRQAA" \
+      pnc_artifact_id="10210052" \
+      pnc_build_id="AYJ7CD5STRQAA" \
       license="EPLv2" \
       maintainer="Nick Boldt <nboldt@redhat.com>" \
       io.openshift.expose-services="" \
