--- a/devspaces-operator-bundle-generated/root/buildinfo/Dockerfile-devspaces-operator-bundle-3.7-84
+++ b/devspaces-operator-bundle-generated/root/buildinfo/Dockerfile-devspaces-operator-bundle-3.7-84
@@ -42,7 +42,7 @@ LABEL operators.operatorframework.io.bundle.mediatype.v1=registry+v1 \
       maintainer="Anatolii Bazko <abazko@redhat.com>, Nick Boldt <nboldt@redhat.com>, Dmytro Nochevnov <dnochevn@redhat.com>" \
       io.openshift.expose-services="" \
       usage=""
-LABEL release=83
+LABEL release=84
 
-ADD devspaces-operator-bundle-container-3.7-83.json /root/buildinfo/content_manifests/devspaces-operator-bundle-container-3.7-83.json
-LABEL "com.redhat.license_terms"="https://www.redhat.com/agreements" "distribution-scope"="public" "vendor"="Red Hat, Inc." "build-date"="2023-04-22T23:05:30" "architecture"="ppc64le" "vcs-type"="git" "vcs-ref"="4f5d0991c54ee33b8d1d85de3502c6f202a1e92b" "url"="https://access.redhat.com/containers/#/registry.access.redhat.com/devspaces/operator-bundle/images/3.7-83"
+ADD devspaces-operator-bundle-container-3.7-84.json /root/buildinfo/content_manifests/devspaces-operator-bundle-container-3.7-84.json
+LABEL "com.redhat.license_terms"="https://www.redhat.com/agreements" "distribution-scope"="public" "vendor"="Red Hat, Inc." "build-date"="2023-04-23T13:43:41" "architecture"="x86_64" "vcs-type"="git" "vcs-ref"="4f5d0991c54ee33b8d1d85de3502c6f202a1e92b" "url"="https://access.redhat.com/containers/#/registry.access.redhat.com/devspaces/operator-bundle/images/3.7-84"
